syntax = "proto3";
package TittyPong;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Common.Networking";

message NetworkSnapshot {
    int32 frameNumber = 1;

    message Entity {
        int32 networkId = 1;
        float posX  = 2;
        float posY  = 3;
        float velX  = 4;
        float velY  = 5;
    }

    repeated Entity entities = 2;

    google.protobuf.Timestamp last_updated = 3;
}

// Our address book file is just one of these.
message NetworkSnapshots {
    repeated NetworkSnapshot snapshots = 1;
}